--- a/QR_Landing.html
+++ b/QR_Landing.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -22,25 +22,30 @@
 <button class="guest" id="guestBtn">Guest Access</button>
 
 <script>
-// 1. Get Greenkeep_Box_ID from URL
-const urlParams = new URLSearchParams(window.location.search);
-const boxID = urlParams.get('Greenkeep_Box_ID') || 'UNKNOWN';
+// 1. Get Greenkeep_Box_ID from the URL
+function getBoxID() 
+{
+    const params = new URLSearchParams(window.location.search);
+    return params.get('Greenkeep_Box_ID') || '';
+}
+const boxID = getBoxID();
 
 // 2. Display it on the page
 document.getElementById('boxIDDisplay').innerText = boxID;
 
 // 3. Your URLs (replace these with your actual URLs)
-const adminURL = "https://creatorapp.zoho.com/siddharth.singh_glsserv/test-greenkeep-2025/#Report:Item_Report?Greenkeep_Box_ID=";
-const guestURL = "https://creatorapp.zohopublic.com/siddharth.singh_glsserv/2025-01-01-greenkeep-ohr/report-perma/Item_Report/4CDbYejw3eZEZBxAFnDJuZ0GMUwPZhMpUyCq4vqqJs17gPjxDqzA7jxONP0PjGJZy7r5WWeWQbkhYBG734H1gVTuJFSy5ht8garH?Greenkeep_Box_ID=";
+const adminBaseURL = "https://creatorapp.zoho.com/siddharth.singh_glsserv/test-greenkeep-2025/#Report:Item_Report?Greenkeep_Box_ID=";
+const guestBaseURL = "https://creatorapp.zohopublic.com/siddharth.singh_glsserv/2025-01-01-greenkeep-ohr/report-perma/Item_Report/4CDbYejw3eZEZBxAFnDJuZ0GMUwPZhMpUyCq4vqqJs17gPjxDqzA7jxONP0PjGJZy7r5WWeWQbkhYBG734H1gVTuJFSy5ht8garH?Greenkeep_Box_ID=";
 
 // 4. Attach click events
-document.getElementById('adminBtn').addEventListener('click', () => {
-    window.location.href = adminURL + encodeURIComponent(boxID);
+document.getElementById('adminBtn').addEventListener('click', function() {
+    window.location.href = adminBaseURL + encodeURIComponent(boxID);
 });
 
 document.getElementById('guestBtn').addEventListener('click', () => {
-    window.location.href = guestURL + encodeURIComponent(boxID);
+    window.location.href = guestBaseURL + encodeURIComponent(boxID);
 });
 </script>
 </body>
 </html>
+
