--- a/QR_Landing.html
+++ b/QR_Landing.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<h2>Choose Access Type</h2>
+<h2>GreenKeep Logistics FZE: Choose Access Type</h2>
 <p>Greenkeep Box ID: <span id="boxIDDisplay"></span></p>
 
 <button class="admin" id="adminBtn">Admin Access</button>
@@ -38,7 +38,7 @@ const adminBaseURL = "https://creatorapp.zoho.com/siddharth.singh_glsserv/test-g
 const guestBaseURL = "https://creatorapp.zohopublic.com/siddharth.singh_glsserv/2025-01-01-greenkeep-ohr/report-perma/Item_Report/4CDbYejw3eZEZBxAFnDJuZ0GMUwPZhMpUyCq4vqqJs17gPjxDqzA7jxONP0PjGJZy7r5WWeWQbkhYBG734H1gVTuJFSy5ht8garH?Greenkeep_Box_ID=";
 
 // 4. Attach click events
-document.getElementById('adminBtn').addEventListener('click', function() {
+document.getElementById('adminBtn').addEventListener('click', () => {
     window.location.href = adminBaseURL + encodeURIComponent(boxID);
 });
 
@@ -48,4 +48,5 @@ document.getElementById('guestBtn').addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
