--- a/QR_Landing.html
+++ b/QR_Landing.html
@@ -38,15 +38,16 @@ const adminBaseURL = "https://creatorapp.zoho.com/siddharth.singh_glsserv/test-g
 const guestBaseURL = "https://creatorapp.zohopublic.com/siddharth.singh_glsserv/2025-01-01-greenkeep-ohr/report-perma/Item_Report/4CDbYejw3eZEZBxAFnDJuZ0GMUwPZhMpUyCq4vqqJs17gPjxDqzA7jxONP0PjGJZy7r5WWeWQbkhYBG734H1gVTuJFSy5ht8garH?Greenkeep_Box_ID=";
 
 // 4. Attach click events
-document.getElementById('adminBtn').addEventListener('click', () => {
+document.getElementById('adminBtn').addEventListener('click', function() {
     window.location.href = adminBaseURL + encodeURIComponent(boxID);
 });
 
-document.getElementById('guestBtn').addEventListener('click', () => {
+document.getElementById('guestBtn').addEventListener('click', function() {
     window.location.href = guestBaseURL + encodeURIComponent(boxID);
 });
 </script>
 </body>
 </html>
+
 
 
