--- a/QR_Landing.html
+++ b/QR_Landing.html
@@ -39,16 +39,12 @@ const guestBaseURL = "https://creatorapp.zohopublic.com/siddharth.singh_glsserv/
 
 // 4. Attach click events
 document.getElementById('adminBtn').addEventListener('click', function() {
-    window.location.href = adminBaseURL + %22 + encodeURIComponent(boxID) + %22;
+    window.location.href = adminBaseURL + "%22" + encodeURIComponent(boxID) + "%22";
 });
 
 document.getElementById('guestBtn').addEventListener('click', function() {
-    window.location.href = guestBaseURL + %22 + encodeURIComponent(boxID) + %22;
+    window.location.href = guestBaseURL + "%22" + encodeURIComponent(boxID) + "%22";
 });
 </script>
 </body>
 </html>
-
-
-
-
