--- a/QR_Landing.html
+++ b/QR_Landing.html
@@ -39,12 +39,13 @@ const guestBaseURL = "https://creatorapp.zohopublic.com/siddharth.singh_glsserv/
 
 // 4. Attach click events
 document.getElementById('adminBtn').addEventListener('click', function() {
-    window.location.href = adminBaseURL + "boxID";
+    window.location.href = adminBaseURL + boxID;
 });
 
 document.getElementById('guestBtn').addEventListener('click', function() {
-    window.location.href = guestBaseURL + "boxID";
+    window.location.href = guestBaseURL + boxID;
 });
 </script>
 </body>
 </html>
+
